syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
// Define the namespace of this class.
option csharp_namespace = "AElf.Contracts.HelloWorld";

service HelloWorld {
  // Declare a state class, need to create a corresponding state class file.
  option (aelf.csharp_state) = "AElf.Contracts.HelloWorld.HelloWorldState";

  // Actions
  // Define methods name and input/output.
  rpc Update (google.protobuf.StringValue) returns (google.protobuf.Empty) {
  }
  rpc CreateRandomCharacter (google.protobuf.Empty) returns (google.protobuf.Empty) {
  }

  // Views
  // Define methods name and input/output. Need to add "is_view=true" attribute.
  rpc Read (google.protobuf.Empty) returns (google.protobuf.StringValue) {
    option (aelf.is_view) = true;
  }
  rpc GetRandomCharacter (google.protobuf.Empty) returns (google.protobuf.StringValue) {
  option (aelf.is_view) = true;
  }
}

// Define the class of input/output.
message UpdatedMessage {
  option (aelf.is_event) = true;
  string value = 1;
}